--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-:root {}
-
 body {
     background-color: #34404E;
     min-height: 100px;
@@ -9,7 +7,7 @@ body {
 }
 
 .container {
-    margin: 0px;
+    margin: 0;
     height: 85vh;
     width: 350px;
     background-color: #384656;
@@ -36,7 +34,6 @@ body {
     overflow-x: hidden;
     scroll-behavior: smooth;
     transition: 1s;
-    
 }
 
 .number-list::-webkit-scrollbar {
@@ -44,7 +41,7 @@ body {
 }
 
 .number-list p {
-    margin: 0px;
+    margin: 0;
     font-size: 4rem;
     font-family: 'Rubik', sans-serif;
     font-weight: 800;
@@ -54,7 +51,7 @@ body {
 }
 
 .number-list .active {
-    margin: 0px;
+    margin: 0;
     font-size: 8rem;
     display: flex;
     align-items: center;
@@ -68,11 +65,13 @@ body {
     min-height: 450px;
     position: absolute
 }
+
 @media screen and (max-width:640px) {
-    body{
+    body {
         background-color: #384656;
     }
-    .container{
+
+    .container {
         height: 100vh;
     }
 }
